--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ runc-app (1.1.12-0ubuntu4~20.04.1) focal; urgency=medium
 
   * Backport from oracular to focal. (LP: #2040461)
     - d/rules: override dh_dwz to do nothing to avoid build error.
+    - d/{rules,control}: use golang 1.21 due to imcompatibilities with libc
+      2.31. https://github.com/opencontainers/runc/issues/4233
 
  -- Athos Ribeiro <athos.ribeiro@canonical.com>  Mon, 14 Oct 2024 17:47:08 -0300
 
