--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+runc-app (1.3.3-0ubuntu1) resolute; urgency=medium
+
+  * Import Upstream version 1.3.3
+  * d/p/improve-resilience-on-busy-system.patch: fix regression on starting
+    containers mounting paths with ".."
+
+ -- Athos Ribeiro <athos@ubuntu.com>  Wed, 12 Nov 2025 20:35:07 -0300
+
 runc-app (1.3.0-0ubuntu2) questing; urgency=medium
 
   * d/control: adjust for new runc-stable package in the archive
