--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+runc-app (1.3.3-0ubuntu2) resolute; urgency=medium
+
+   * SECURITY REGRESSION: Wrong default tmpfs permission handling
+     (LP: #2130744)
+     - d/p/lp-2130744.patch: rootfs: only set mode= for tmpfs
+       mount if target already existed
+
+ -- Nick Galanis <nick.galanis@canonical.com>  Wed, 19 Nov 2025 12:58:14 +0000
+
 runc-app (1.3.3-0ubuntu1) resolute; urgency=medium
 
   * Import Upstream version 1.3.3
