--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+runc-app (1.4.0-0ubuntu1) resolute; urgency=medium
+
+  * New upstream version 1.4.0
+  * d/copyright: update copyright data
+  * d/patches: drop patches applied upstream
+    - improve-resilience-on-busy-system.patch
+    - lp-2130744.patch
+
+ -- Athos Ribeiro <athos@ubuntu.com>  Tue, 13 Jan 2026 12:54:08 -0300
+
 runc-app (1.3.3-0ubuntu2) resolute; urgency=medium
 
    * SECURITY REGRESSION: Wrong default tmpfs permission handling
